--- a/style.css
+++ b/style.css
@@ -5,12 +5,30 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 50px;
 }
 
+/* 색칠판 제작 */
 .canvas {
     width: 700px;
-    height: 500px;
+    height: 700px;
     background-color: white;
-    border-radius: 15px;
-    box-shadow: 0 4px 6px rgba(50,50,93,0.11), 0 1px 3px rgba(0);
+    border-radius: 15px;    
+    box-shadow: 0 4px 6px rgba(50,50,93,0.11), 0 1px 3px rgba(0,50,93,0.2);
+}
+
+.controls {
+    margin-top: 70px;
+}
+
+.controls .controls__colors {
+    display: flex;
+}
+
+.controls__colors .controls__color {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(50,50,93,0.11), 0 1px 3px rgba(0,50,93,0.2);
 }
