--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding: 50px 0;
 }
 
 /* 색칠판 제작 */
@@ -19,6 +19,34 @@ body{
 
 .controls {
     margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.controls .controls__btns {
+    margin-bottom: 30px;
+}
+
+.controls__btns button {
+    /* button이 갖고 있는 기본 속성 초기화 */
+    all: unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 20px;
+    width: 80px;
+    text-align: center;
+    border-radius: 10px;
+    border: 1px solid rgba(0,0,0,0.2);
+    color: rgba(0,0,0,0.7);
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    box-shadow: 0 4px 6px rgba(50,50,93,0.11), 0 1px 3px rgba(0,50,93,0.2);
+}
+
+.controls__btns button:active {
+    transform: scale(0.98);
 }
 
 .controls .controls__colors {
@@ -31,4 +59,8 @@ body{
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50,50,93,0.11), 0 1px 3px rgba(0,50,93,0.2);
+}
+
+.controls .controls__range {
+    margin-bottom: 30px;
 }
